--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -1,3 +1,64 @@
+.formulario {
+  margin: 15px;
+}
+.formulario h1 {
+  color: #4d4d4d;
+  font-family: sans-serif;
+  font-size: 1.5em;
+}
+.formulario h2 {
+  color: #4d4d4d;
+  font-family: sans-serif;
+  font-size: 1.3em;
+}
+.formulario ::placeholder {
+  color: #cacaca;
+}
+.formulario input, .formulario p {
+  color: #cacaca;
+  font-family: sans-serif;
+  font-size: 1em;
+  margin-left: 5vw;
+  width: -webkit-fill-available;
+}
+.formulario input {
+  border: 0;
+  height: 50px;
+  margin-left: 0;
+  padding: 15px;
+}
+.formulario__icone {
+  display: flex;
+}
+.formulario__icone__select-file {
+  color: #fff;
+  font-family: sans-serif;
+  background: #bbb;
+  border: 0;
+  border-radius: 3px;
+  cursor: pointer;
+  width: 80%;
+}
+.formulario__cor {
+  display: flex;
+}
+.formulario__cor__select-color {
+  color: #fff;
+  font-family: sans-serif;
+  background: #2d2d2d;
+  border: 0;
+  border-radius: 3px;
+  cursor: pointer;
+  width: 45%;
+}
+.formulario select {
+  color: #cacaca;
+  border: 0;
+  height: 50px;
+  padding: 15px;
+  width: -webkit-fill-available;
+}
+
 html, body {
   height: 100%;
   margin: 0;
