--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -1,4 +1,6 @@
 @import './_partials/variables';
+@import './_partials/mixins';
+@import '../../components/form/Form';
 
 html, body {
     height: 100%;
