--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -5,11 +5,18 @@
   color: #4d4d4d;
   font-family: sans-serif;
   font-size: 1.5em;
+  margin-bottom: 3vh;
+}
+.formulario h1::after {
+  content: "X";
+  position: absolute;
+  right: 20px;
+  font-weight: bolder;
 }
 .formulario h2 {
   color: #4d4d4d;
   font-family: sans-serif;
-  font-size: 1.3em;
+  font-size: 1.1em;
 }
 .formulario ::placeholder {
   color: #cacaca;
@@ -50,6 +57,17 @@
   border-radius: 3px;
   cursor: pointer;
   width: 45%;
+}
+.formulario__cor-caixa {
+  bottom: 0;
+  position: absolute;
+}
+.formulario__cor-caixa--fecha {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 .formulario select {
   color: #cacaca;
