--- a/src/components/form/_Form.scss
+++ b/src/components/form/_Form.scss
@@ -55,6 +55,7 @@
     select {
         color: $corSecundaria;
 
+        background: #fff;
         border: 0;
         height: 50px;
         padding: 15px;
