--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -2,7 +2,9 @@
 @import './_partials/mixins';
 @import '../../components/form/Form';
 
-html, body {
+html, 
+body, 
+#root {
     height: 100%;
     margin: 0;
     padding: 0;
