Criação e importação do component preview

--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -1,6 +1,7 @@
 @import './_partials/variables';
 @import './_partials/mixins';
 @import '../../components/form/Form';
+@import '../../components/preview/Preview';
 
 html, 
 body, 
