--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -1,8 +1,9 @@
 .formulario {
+  height: 100%;
   margin: 15px;
 }
 .formulario h1 {
-  color: #4d4d4d;
+  color: #6d6d6d;
   font-family: sans-serif;
   font-size: 1.5em;
   margin-bottom: 3vh;
@@ -14,7 +15,7 @@
   font-weight: bolder;
 }
 .formulario h2 {
-  color: #4d4d4d;
+  color: #6d6d6d;
   font-family: sans-serif;
   font-size: 1.1em;
 }
@@ -71,10 +72,67 @@
 }
 .formulario select {
   color: #cacaca;
+  background: #fff;
   border: 0;
   height: 50px;
   padding: 15px;
   width: -webkit-fill-available;
+}
+
+.preview {
+  height: 100%;
+  margin: 15px;
+}
+.preview h2 {
+  color: #6d6d6d;
+  font-family: sans-serif;
+  font-size: 1.1em;
+}
+.preview__corpo {
+  align-items: center;
+  display: flex;
+  margin-bottom: 20px;
+}
+.preview__corpo--caixa {
+  align-items: center;
+  background: #191919;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  margin-right: 15px;
+  padding: 35px 0;
+  width: 150px;
+}
+.preview__corpo--caixa__img {
+  display: block;
+  height: 50px;
+  width: 50px;
+}
+.preview__corpo h2 {
+  margin-left: 5vw;
+}
+.preview__corpo--descricao p:not(.small) {
+  color: #cacaca;
+  font-family: sans-serif;
+  font-size: 1em;
+  margin-left: 5vw;
+  width: -webkit-fill-available;
+}
+.preview__corpo--descricao p.small {
+  color: #6d6d6d;
+  font-family: sans-serif;
+  font-size: 0.9em;
+  margin-left: 5vw;
+}
+.preview button {
+  color: #fff;
+  font-family: sans-serif;
+  background: #bbb;
+  border: 0;
+  border-radius: 3px;
+  cursor: pointer;
+  width: 100%;
+  height: 50px;
 }
 
 html,
