--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -1,5 +1,7 @@
 @import './_partials/variables';
 @import './_partials/mixins';
+@import './_partials/conteudo-principal';
+@import './_partials/medias';
 @import '../../components/form/Form';
 @import '../../components/preview/Preview';
 
