--- a/src/components/preview/_Preview.scss
+++ b/src/components/preview/_Preview.scss
@@ -10,7 +10,7 @@
         display: flex;
         margin-bottom: 20px;
         &--caixa {
-            align-items: center;
+            align-self: baseline;
             background: #191919;
             display: flex;
             height: 100%;
