--- a/src/components/preview/_Preview.scss
+++ b/src/components/preview/_Preview.scss
@@ -10,19 +10,14 @@
         display: flex;
         margin-bottom: 20px;
         &--caixa {
+            align-items: center;
             align-self: baseline;
             background: #191919;
             display: flex;
-            height: 100%;
+            height: 200px;
             justify-content: center;
             margin-right: 15px;
-            padding: 35px 0;
             width: 150px;
-            &__img {
-                display: block;
-                height: 50px;
-                width: 50px;
-            }
         }
         & h2 {
             margin-left: 5vw;
