--- a/src/styles/scss/_partials/_medias.scss
+++ b/src/styles/scss/_partials/_medias.scss
@@ -33,6 +33,10 @@
             margin: 0 30px 30px;
             .formulario {
                 width: 45%;
+                .files-box {
+                    left: -12px;
+                    right: 0;
+                }
             }
             .preview {
                 border-left: 1px solid #cccccc94;
