--- a/src/styles/scss/_partials/_mixins.scss
+++ b/src/styles/scss/_partials/_mixins.scss
@@ -9,7 +9,7 @@
     font-family: sans-serif;
     font-size: 1em;
 
-    margin-left: 5vw;
+    margin-left: 15px;
     width: -webkit-fill-available;
 }
 
