clean code e posicionamento

--- a/src/styles/scss/_partials/_medias.scss
+++ b/src/styles/scss/_partials/_medias.scss
@@ -43,7 +43,7 @@
             }
             .preview {
                 border-left: 1px solid #cccccc94;
-                margin-top: 62px;
+                margin: 60px 15px;
                 padding: 30px 50px;
                 width: 30%;
                 &__corpo {
