--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -13,8 +13,7 @@
   font-size: 1.5em;
   margin-bottom: 3vh;
 }
-.formulario h1::after {
-  content: "X";
+.formulario__fecha {
   cursor: pointer;
   position: absolute;
   right: 50px;
@@ -198,7 +197,7 @@
   }
   #root .conteudo-principal .preview {
     border-left: 1px solid #cccccc94;
-    margin-top: 62px;
+    margin: 60px 15px;
     padding: 30px 50px;
     width: 30%;
   }
