--- a/src/components/form/_Form.scss
+++ b/src/components/form/_Form.scss
@@ -4,13 +4,18 @@
     h1 {
         @include titulos(1.5em);
         margin-bottom: 3vh;
-        &::after {
-            content: "X";
-            cursor: pointer;
-            position: absolute;
-            right: 50px;
-            font-weight: bolder;
-        }
+    }
+    &__fecha {
+        font-size: 1.2em;
+        font-weight: bolder;
+
+        background: initial;
+        border: 0;
+        cursor: pointer;
+        position: absolute;
+        right: 50px;
+        top: 40px;
+        z-index: 2;
     }
     h2 {
         @include titulos(1.1em);
