--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -14,10 +14,15 @@
   margin-bottom: 3vh;
 }
 .formulario__fecha {
+  font-size: 1.2em;
+  font-weight: bolder;
+  background: initial;
+  border: 0;
   cursor: pointer;
   position: absolute;
   right: 50px;
-  font-weight: bolder;
+  top: 40px;
+  z-index: 2;
 }
 .formulario h2 {
   color: #6d6d6d;
@@ -161,7 +166,33 @@
   height: 50px;
 }
 
+.modal {
+  color: #fff;
+  font-family: sans-serif;
+  font-size: 1.5em;
+  align-items: center;
+  background-color: #000000bd;
+  bottom: 0;
+  display: flex;
+  left: 0;
+  justify-content: center;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 2;
+}
+.modal__message-box {
+  background: #4d4d4d;
+  padding: 15vh 10vw;
+  position: absolute;
+  top: 12%;
+}
+
 @media screen and (min-width: 768px) {
+  .modal {
+    height: 152vh;
+  }
+
   .formulario__icone__select-box__file {
     width: 45%;
   }
@@ -185,8 +216,14 @@
     justify-content: space-around;
     margin: 0 30px 30px;
   }
+  #root .conteudo-principal .modal {
+    height: 120vh;
+  }
   #root .conteudo-principal .formulario {
     width: 45%;
+  }
+  #root .conteudo-principal .formulario__fecha {
+    top: 185px;
   }
   #root .conteudo-principal .formulario .formulario__icone__select-box {
     left: 75px;
@@ -218,7 +255,14 @@
     margin-left: 25%;
   }
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1240px) {
+  .modal {
+    height: 125vh;
+  }
+
+  .formulario__fecha {
+    top: 105px !important;
+  }
   .formulario .formulario__icone__select-box p {
     margin-left: 45px !important;
   }
