--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -2,7 +2,7 @@
 @import './_partials/mixins';
 @import './_partials/conteudo-principal';
 @import '../../components/form/Form';
-// @import '../../components/preview/Preview';
+@import '../../components/modal/Modal';
 @import './_partials/medias';
 
 html, 
