--- a/src/components/form/_Form.scss
+++ b/src/components/form/_Form.scss
@@ -16,6 +16,12 @@
         right: 50px;
         top: 40px;
         z-index: 2;
+        &.fixed {
+            background: #fff;
+            position: fixed;
+            top: 115px;
+            z-index: 3;
+        }
     }
     h2 {
         @include titulos(1.1em);
