--- a/src/components/modal/Modal.scss
+++ b/src/components/modal/Modal.scss
@@ -9,7 +9,7 @@
     display: flex;
     left: 0;
     justify-content: center;
-    position: absolute;
+    position: fixed;
     right: 0;
     top: 0;
     z-index: 2;
