--- a/src/styles/scss/_partials/_medias.scss
+++ b/src/styles/scss/_partials/_medias.scss
@@ -1,8 +1,8 @@
 @media screen and (min-width: 768px) {
-    .modal {
-        height: 152vh;
-    }
     .formulario {
+        &__fecha.fixed {
+            top: 155px;
+        }
         &__icone {
             &__select-box__file {
                 width: 45%;
@@ -34,12 +34,10 @@
             flex-direction: row;
             justify-content: space-around;
             margin: 0 30px 30px;
-            .modal {
-                height: 120vh;
-            }
             .formulario {
                 width: 45%;
                 &__fecha {
+                    right: 95px;
                     top: 185px;
                 }
                 .formulario__icone__select-box {
@@ -78,9 +76,6 @@
 }
 
 @media screen and (min-width: 1240px) {
-    .modal {
-        height: 125vh;
-    }
     .formulario {
         &__fecha {
             top: 105px !important;
