--- a/src/components/modal/Modal.scss
+++ b/src/components/modal/Modal.scss
@@ -13,10 +13,30 @@
     right: 0;
     top: 0;
     z-index: 2;
-    &__message-box {
+    &__message-box,
+    &__succes-box {
         background: #4d4d4d;
         padding: 15vh 10vw;
         position: absolute;
         top: 12%;
+    }
+    &__succes-box {
+        color: #2d2d2d;
+
+        background-image: linear-gradient(to right, #fdfdfd, #f5f5f5, #ededed, #e6e6e6, #dedede);
+        & > p:first-child {
+            font-weight: bold;
+
+            border-bottom: 1px solid #5d5d5d57;
+        }
+        & > p:nth-child(2) {
+            text-align: center;
+        }
+        &__app-info {
+            text-align: center;
+
+            border: 1px dashed;
+            border-radius: 5px;
+        }
     }
 }
