--- a/src/components/form/_Form.scss
+++ b/src/components/form/_Form.scss
@@ -87,6 +87,7 @@
         background: url(https://cdn1.iconfinder.com/data/icons/material-core/10/arrow-drop-down-512.png) no-repeat right;
         background-size: 15px;
         border: 0;
+        border-bottom: 1px solid #5d5d5d57;
         height: 50px;
         padding: 15px;
         width: -webkit-fill-available;
