--- a/src/components/modal/Modal.scss
+++ b/src/components/modal/Modal.scss
@@ -21,9 +21,10 @@
         top: 12%;
     }
     &__succes-box {
-        color: #2d2d2d;
+        color: #fff;
 
-        background-image: linear-gradient(to right, #fdfdfd, #f5f5f5, #ededed, #e6e6e6, #dedede);
+        background: #4d4d4d;
+        border-radius: 10px;
         & > p:first-child {
             font-weight: bold;
 
@@ -37,6 +38,7 @@
 
             border: 1px dashed;
             border-radius: 5px;
+            padding: 15px;
         }
     }
 }
