--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -107,6 +107,7 @@
   background: url(https://cdn1.iconfinder.com/data/icons/material-core/10/arrow-drop-down-512.png) no-repeat right;
   background-size: 15px;
   border: 0;
+  border-bottom: 1px solid #5d5d5d57;
   height: 50px;
   padding: 15px;
   width: -webkit-fill-available;
@@ -194,8 +195,9 @@
   top: 12%;
 }
 .modal__succes-box {
-  color: #2d2d2d;
-  background-image: linear-gradient(to right, #fdfdfd, #f5f5f5, #ededed, #e6e6e6, #dedede);
+  color: #fff;
+  background: #4d4d4d;
+  border-radius: 10px;
 }
 .modal__succes-box > p:first-child {
   font-weight: bold;
@@ -208,6 +210,7 @@
   text-align: center;
   border: 1px dashed;
   border-radius: 5px;
+  padding: 15px;
 }
 
 @media screen and (min-width: 768px) {
